fix url and overlapping

--- a/src/Blocks/Footnote/less/public.less
+++ b/src/Blocks/Footnote/less/public.less
@@ -2,6 +2,22 @@
   & :target {
     background: yellow;
   }
+
+  ol {
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    
+    li {
+      word-wrap: break-word;
+      overflow-wrap: break-word;
+      
+      a {
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+        word-break: break-all;
+      }
+    }
+  }
 }
 
 .slateFootnotes {
